# web

./: .gitignore
frontend/: package.json
jacob_web/: manage.py  pyproject.toml
jacob_web/jacob_web/: asgi.py  settings.py  urls.py  wsgi.py
