[tool.poetry]
name = "Jacob-web"
version = "0.1.0"
description = "Web interface for universal student's platform Jacob"
authors = ["Daniil <dadyarri@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.1.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
